[workspace.package]
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2021"
repository = "https://github.com/snowfork/snowbridge.git"

[workspace]
resolver = "2"
members = [
	"pallets/ethereum-client",
	"pallets/inbound-queue",
	"pallets/outbound-queue",
	"pallets/outbound-queue/merkle-tree",
	"pallets/outbound-queue/runtime-api",
	"pallets/system",
	"pallets/system/runtime-api",
	"primitives/beacon",
	"primitives/core",
	"primitives/ethereum",
	"primitives/router",
	"runtime/runtime-common",
	"runtime/test-common",
]

[patch.'https://github.com/snowfork/snowbridge']
snowbridge-beacon-primitives = { path = "./primitives/beacon" }
snowbridge-pallet-system = { path = "./pallets/system" }
snowbridge-system-runtime-api = { path = "./pallets/system/runtime-api" }
snowbridge-core = { path = "./primitives/core" }
snowbridge-pallet-ethereum-client = { path = "./pallets/ethereum-client" }
snowbridge-pallet-inbound-queue = { path = "./pallets/inbound-queue" }
snowbridge-pallet-outbound-queue = { path = "./pallets/outbound-queue" }
snowbridge-outbound-queue-runtime-api = { path = "./pallets/outbound-queue/runtime-api" }
snowbridge-router-primitives = { path = "./primitives/router" }
snowbridge-runtime-common = { path = "./runtime/runtime-common" }
