[package]
name = "snowbridge-smoketest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
hex-literal = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
subxt = { git = "https://github.com/paritytech/subxt.git", tag = "v0.27.1" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["abigen", "ws"] }
sp-core = "16.0.0"
lazy_static = "1.4.0"

[dev-dependencies]
xcm = { path = "../polkadot-sdk/polkadot/xcm", package="staging-xcm"}
