[package]
name = "substrate-relay"
version = "1.2.1"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1.79"
codec = { package = "parity-scale-codec", version = "3.6.1" }
env_logger = "0.11"
futures = "0.3.30"
hex = "0.4"
log = { workspace = true }
num-format = "0.4"
num-traits = "0.2"
rbtag = "0.3"
structopt = "0.3"
signal-hook = "0.3.15"
signal-hook-async-std = "0.2.2"
strum = { version = "0.26.2", features = ["derive"] }

# Bridge dependencies
bp-bridge-hub-polkadot = { path = "../chains/chain-bridge-hub-polkadot" }
bp-bridge-hub-rococo = { path = "../chains/chain-bridge-hub-rococo" }
bp-header-chain = { path = "../primitives/header-chain" }
bp-messages = { path = "../primitives/messages" }
bp-parachains = { path = "../primitives/parachains" }
bp-polkadot-bulletin = { path = "../chains/chain-polkadot-bulletin" }
bp-polkadot = { path = "../chains/chain-polkadot" }
bp-polkadot-core = { path = "../primitives/polkadot-core" }
bp-rococo = { path = "../chains/chain-rococo" }
bp-runtime = { path = "../primitives/runtime" }
bridge-runtime-common = { path = "../bin/runtime-common" }
pallet-bridge-parachains = { path = "../modules/parachains" }
parachains-relay = { path = "../relays/parachains" }
relay-bridge-hub-kusama-client = { path = "../relay-clients/client-bridge-hub-kusama" }
relay-bridge-hub-polkadot-client = { path = "../relay-clients/client-bridge-hub-polkadot" }
relay-bridge-hub-rococo-client = { path = "../relay-clients/client-bridge-hub-rococo" }
relay-bridge-hub-westend-client = { path = "../relay-clients/client-bridge-hub-westend" }
relay-kusama-client = { path = "../relay-clients/client-kusama" }
relay-polkadot-client = { path = "../relay-clients/client-polkadot" }
relay-polkadot-bulletin-client = { path = "../relay-clients/client-polkadot-bulletin" }
relay-rococo-client = { path = "../relay-clients/client-rococo" }
relay-substrate-client = { path = "../relays/client-substrate" }
relay-utils = { path = "../relays/utils" }
relay-westend-client = { path = "../relay-clients/client-westend" }
substrate-relay-helper = { path = "../relays/lib-substrate-relay" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[dev-dependencies]
bp-test-utils = { path = "../primitives/test-utils" }
hex-literal = "0.4"
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
tempfile = "3.10"
finality-grandpa = { version = "0.16.2" }
