[package]
name = "battleship-runtime"
description = "A parachain runtime for the battleship game."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true, default-features = true }

# Local
pallet-battleship = { path = "../pallets/battleship", default-features = false }

# Statement and transaction storage
pallet-statement = { workspace = true }
pallet-transaction-storage = { workspace = true }

polkadot-sdk = { workspace = true, default-features = false, features = [
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-message-queue",
	"pallet-session",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",

	"pallet-xcm",
	"polkadot-parachain-primitives",
	"polkadot-runtime-common",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",

	"cumulus-pallet-aura-ext",
	"cumulus-pallet-session-benchmarking",
	"cumulus-pallet-weight-reclaim",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-utility",
	"pallet-collator-selection",
	"parachains-common",
	"staging-parachain-info",

	"runtime",
] }

# Cumulus
cumulus-pallet-parachain-system = { workspace = true, features = [ "transaction-index" ] }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-battleship/std",
	"pallet-statement/std",
	"pallet-transaction-storage/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"hex-literal",
	"pallet-battleship/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-battleship/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"polkadot-sdk/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
